--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
         <img src="image copy 3.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou kamila_</p>
-        <h1>Eu ensino Programação</h1>
-        <p eu sou estudante do ensino medio, estou aprendendo programaçao.</p>
-        <p>Minhas habilidades</p>
+        <h1>Eu estou aprendendo Programação</h1>
+        <p>Eu sou estudante do ensino medio, estou aprendendo programação.</p>
+         <h1>Minhas habilidades</h1>
+           </p>Estou no ultimo ano do ensino médio, tenho experiẽncia básica em linguagens JavaScrip,html,css.</p>
+          <p> Também sou Nail designer e tenho facilidade em aprender.
+        </p>
+       
         <div>
             <p class="badge bg-secondary">HTML</p>
             <p class="badge bg-secondary">CSS</p>
